--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,6 +3,29 @@
   margin-top: 3em;
 }
 
+.about h1 {
+  display: flex;
+  gap: 15px;
+}
+
+.typewriter {
+  display: inline-block;
+  overflow: hidden;
+  border-right: 2px solid #000;
+  white-space: nowrap;
+  width: 0;
+  animation: typing 2s steps(20, end) forwards, blink 0.75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 580px }
+}
+
+@keyframes blink {
+  50% { border-color: transparent }
+}
+
 .about__name {
   color: var(--clr-primary);
 }
